# uri

./: CMakeLists.txt  CMakePresets.json  Makefile  packages.cmake
include/uri/: CMakeLists.txt  uri  uri.h
src/: CMakeLists.txt
src/liburi/: CMakeLists.txt  error.cpp  uri.cpp
